2004-10-14  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-data-model-hash.c (gda_data_model_hash_get_n_rows): added
	missing class method implementation.
	(gda_data_model_hash_class_init): ditto.

2004-10-13  Alan Knowles <alan@akbkhome.com>

	* libgda/gda-config.c:
	* testing/client.c: Win32 build fixes.

2004-10-13  David Hollis <dhollis@davehollis.com>

	* libgda.spec.in: fixed for correct building on RH.

2004-10-10  Tomasz Kłoczko <kloczek@pld.org.pl>

	* configure.in, providers/xbase/gda-xbase-database.cpp: fixes for
	  correct detect xbase library and build backend module (fixed
	  xbase.h header path).

	* configure.in: added fixes for latest autoheaders (added autoheaders prototypes).

	* po/POTFILES.in: remove providers/sybase/main.c from file (never
	  used in dist resources).OA

2004-10-10  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.1.99.

2004-10-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* libsql/Makefile.am: use $(top_builddir) for libgdasql.

2004-10-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda.pc.in:
	* libsql/Makefile.am:
	* libgda/Makefile.am:
	* report/libgda-report/Makefile.am: install headers in versioned
	directories.

2004-10-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.[ch]: added GdaProviderParameterInfo structure.
	Changed list of params in GdaProviderInfo to be a list of
	GdaProviderParameterInfo structures.
	(gda_provider_parameter_info_get_type, gda_provider_parameter_info_copy,
	gda_provider_parameter_info_free): new functions.
	(gda_provider_info_copy, gda_provider_info_free): manage correctly the
	new list of arguments.

	* providers/bdb/libmain.c (plugin_get_connection_params):
	* providers/firebird/libmain.c (plugin_get_connection_params):
	* providers/freetds/libmain.c (plugin_get_connection_params):
	* providers/ibmdb2/libmain.c (plugin_get_connection_params):
	* providers/ldap/libmain.c (plugin_get_connection_params):
	* providers/mdb/libmain.c (plugin_get_connection_params):